_deploy_/k8s/keygen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: keygen
    app.kubernetes.io/component: server
  name: keygen
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keygen
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keygen
        app.kubernetes.io/component: server
    spec:
      containers:
        - image: demeero/pocket-link-keygen:latest
          imagePullPolicy: Always
          name: keygen
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          lifecycle:
            # this is to prevent the pod from being killed while it is still serving requests
            # details: https://learnk8s.io/graceful-shutdown
            preStop:
              exec:
                command: [ "sleep", "10" ]
          livenessProbe:
            grpc:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            grpc:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: keygen
    app.kubernetes.io/component: server
  name: keygen
spec:
  ports:
    - name: "keygen-grpc-port"
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: keygen
    app.kubernetes.io/component: server
