_deploy_/k8s/links.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: links
    app.kubernetes.io/component: server
  name: links
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: links
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: links
        app.kubernetes.io/component: server
    spec:
      containers:
        - image: demeero/pocket-link-links:latest
          imagePullPolicy: Always
          name: links
          ports:
            - containerPort: 8081
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
              cpu: 200m
          lifecycle:
            # this is to prevent the pod from being killed while it is still serving requests
            # details: https://learnk8s.io/graceful-shutdown
            preStop:
              exec:
                command: [ "sleep", "10" ]
          livenessProbe:
            grpc:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            grpc:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: links
    app.kubernetes.io/component: server
  name: links
spec:
  ports:
    - name: "links-grpc-port"
      port: 8081
      targetPort: 8081
    - name: "links-http-port"
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: links
    app.kubernetes.io/component: server
